Build 3.4.0.CR1
=============================

** Sub-task
    * [NH-3434] - Need to be sure NH-3428 is resolved in 3.Next.  


** Bug
    * [NH-2128] - Interceptor fires AfterTransactionCompletion too many times with distributed transactions and user-supplied connections
    * [NH-2921] - IsSpecialName of getter/setter method of proxy property returns false
    * [NH-2923] - Extra lazy indexed collection throws InvalidCastException fetching Count
    * [NH-2943] - Mapping XmlDocument (.NET) to XmlType (Oracle). Class XmlDocType not working.
    * [NH-2963] - Validation on a collection property (mapped with Loquacious config) raise an exception [Invalid expression type: Expected ExpressionType.MemberAccess, Found Convert]
    * [NH-3103] - ManyToAny ByCode does not use field customizer 
    * [NH-3140] - Bag ManyToMany column is ignored if it's the same as the child entity name and is replaced with "elt" in the sql.
    * [NH-3190] - QuerySyntaxException is thrown when where contains subselect that matches bool value
    * [NH-3234] - Merge is failing with "Unable to resolve property"
    * [NH-3237] - Max and Min aggregate expressions do not work for custom UserType due to unnecessary HQL Cast
    * [NH-3277] - LINQ Projection of Int64 using ToString method causes "cast as char" instead of "cast as nvarchar" in MsSqlCe dialect
    * [NH-3280] - Mapping OneToOne doesn't work for inherited members
    * [NH-3315] - Distinct paging problem with alias SQL Server 2005
    * [NH-3405] - Cannot Use XDocument When Setting Wrap Resultsets
    * [NH-3496] - NHibernate SqlServer2012Dialect drop sequence bug
    * [NH-3505] - Stateless sessions fail to save relationships pointing to proxies when versioning is enabled
    * [NH-3572] - AfterTransactionCompletion called twice if a distributed transaction is rolled back
    * [NH-3592] - Failed to execute multi criteria with Ms Sql Ce 4.0
    * [NH-3614] - Cannot create project an enumerable of non-mapped objects (List<string>)