@@ -8,7 +8,7 @@
 // </auto-generated>
 //------------------------------------------------------------------------------
 
-// $ANTLR 3.5.0.2 Hql.g 2014-08-03 13:32:00
+// $ANTLR 3.5.0.2 Hql.g 2014-08-03 16:52:01
 
 // The variable 'variable' is assigned but its value is never used.
 #pragma warning disable 219
