@@ -1,5 +1,13 @@
 Build 3.4.0.CR1
 =============================
+** Known BREAKING CHANGES from NH3.3.0.GA to NH3.4.0.GA
+
+    ##### Possible Breaking Changes #####
+        * [NH-2290] Invalid hql parenthesis expansion in generated sql
+            Unary minus before parentheses in HQL lost the parentheses when translated
+			to SQL and therefore the wrong value was returned. This use of unary minus is now
+			implemented in the mathematically correct way.
+
 
 ** Sub-task
     * [NH-3434] - Need to be sure NH-3428 is resolved in 3.Next.  
